# phone_a_friend

./: .gitignore  README.md  REUSE.toml  bundle.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: index.html
phone_a_friend/: __init__.py  __main__.py  crypto.py  store.py  tui.py
tests/: test_cli.py  test_flow.py  test_store_edges.py  test_tui.py
